<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio_sesion"
            android:icon="@mipmap/ic_perfil"
            android:title="@string/inicio_de_sesi_n" />
        <item
            android:id="@+id/nav_registro"
            android:icon="@mipmap/ic_register"
            android:title="@string/registro" />
    </group>


        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_mis_plantas"
                android:icon="@drawable/mis_plantas_icon"
                android:title="@string/mis_plantas"
                android:visible="false"/>
            <item
                android:id="@+id/nav_todas_las_plantas"
                android:icon="@drawable/list_all_plants"
                android:title="@string/todas_las_plantas"
                android:visible="false"/>

            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/log_out"
                android:title="@string/cerrar_sesion"
                android:visible="false"/>
        </group>


</menu>
