<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTitleToolbar"
    android:paddingTop="20dp"
    android:orientation="vertical"

    tools:context="co.edu.uniquindio.moviles.herbariohuq.activity.LoginActivity">

<!--Linear layout cabecera-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/back_login_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_atras_white"
        android:layout_weight="1"
        android:contentDescription="@string/imagen_para_ir_hacia_la_actividad_principal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/herbario_huq"
        android:textStyle="bold"
        android:textSize="12pt"
        android:textColor="@color/colorPrimary"
        android:layout_weight="2"/>

</LinearLayout>

<!--inicio de sesion-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="50dp"

    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio_de_sesi_n"
        android:textColor="@color/colorPrimary"
        android:textSize="10pt"
        android:gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:elevation="8dp" />


        <!--Campos de texto-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/correo"
                    android:background="@drawable/edit_txt_bg"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/hint_color_login"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/clave"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/edit_txt_bg"
                    android:textColorHint="@color/hint_color_login"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtRecuperarContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_olvidado_tu_clave"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                />


            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"

                android:text="Ingresar"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_login_bg"/>

        </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        android:layout_marginTop="50dp"/>


</LinearLayout>

<!--Footer-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/a_n_no_te_encuentras_registrado"/>

        <TextView
            android:id="@+id/go_to_registro_from_login"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/registrate"/>

    </LinearLayout>


</LinearLayout>
