<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTitleToolbar"
    android:paddingTop="15dp"
    android:orientation="vertical"

    tools:context="co.edu.uniquindio.moviles.herbariohuq.activity.LoginActivity">

    <!--Linear layout cabecera-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_registro_planta_to_list_send_plantas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/imagen_para_ir_hacia_la_actividad_principal"
            android:src="@mipmap/ic_atras_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/herbario_huq"
            android:textStyle="bold"
            android:textSize="12pt"
            android:textColor="@color/colorPrimary"
            android:layout_weight="2"/>

    </LinearLayout>

    <!--inicio de sesion-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Registro Planta"
            android:textColor="@color/colorPrimary"
            android:textSize="10pt" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:elevation="8dp" />


        <!--Imagen para agregar foto-->

        <ImageView
            android:id="@+id/add_planta_foto"

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/add_photo_planta" />



        <!--Campos de texto-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Datos Planta"
                        android:textSize="17dp"
                        android:gravity="center"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorTitleToolbar"
                        android:elevation="8dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_txt_bg"
                            android:hint="@string/familia_planta"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorHint="@color/hint_color_login" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_txt_bg"
                            android:hint="@string/subfamilia_planta"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorHint="@color/hint_color_login" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_txt_bg"
                            android:hint="@string/tribu_planta"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorHint="@color/hint_color_login" />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_txt_bg"
                            android:hint="@string/genero_planta"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorHint="@color/hint_color_login" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_txt_bg"
                            android:hint="@string/especie_planta"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorHint="@color/hint_color_login" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_txt_bg"
                            android:hint="@string/detalle_del_lugar_planta"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorHint="@color/hint_color_login" />

                    </android.support.design.widget.TextInputLayout>



                </LinearLayout>
            </ScrollView>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_enviar_planta"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"

        android:background="@drawable/button_login_bg"
        android:text="@string/enviar_planta"
        android:textColor="@color/colorPrimary" />


</LinearLayout>
